# sales_pyspark_project

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md  docker-compose.yml  pyproject.toml  requirements.txt
datasets/source_crm/: sales_details.csv
datasets/source_marketing/: discount_info.csv  sales_discount.csv  salesperson.csv  salesperson_sales.csv
docs/: data_catalog.md  dataflow.xml  gold_data_model.xml  naming_conventions.md
etl/: __init__.py  pyspark_etl.py  run_pipeline.py
etl/utils/: __init__.py  sql.py
sales_etl/: __init__.py  cli.py  config.py  pipeline.py
sales_etl/common/: __init__.py  io_utils.py  logging_utils.py  spark_session.py
sales_etl/jobs/: __init__.py  bronze.py  gold.py  publish.py  silver.py
tests/: quality_checks_gold.sql  quality_checks_silver.sql
